test/fixtures/precompiled_modules/foundation_requires_explicit_dep.swift
import Foundation // expected-error {{Foundation}}
